--- a/.sequelizerc
+++ b/.sequelizerc
@@ -2,5 +2,6 @@ const path = require('path');
 
 module.exports = {
   'config': path.resolve('src', 'config', 'database.js'),
+  'models-path': path.resolve('src', 'models'),
   'migrations-path': path.resolve('util', 'db', 'migrations')
 };
