--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "test": "start-server-and-test start http://localhost:3009/fit-and-competent-api/v1/health nm:run"
   },
   "engines": {
-    "node": "12.14.1",
-    "npm": "6.13.4"
+    "node": ">=16.0.0"
   },
   "license": "MIT",
   "dependencies": {
