--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "type": "module",
   "scripts": {
     "lint": "xo",
-    "premigrations": "npx sequelize-cli db:migrate --env preMigrations --migrations-path util/db/pre-migrations",
-    "migrations": "npx sequelize-cli db:migrate  --env database",
-    "prestart": "npm run lint && npm run migrations",
+    "premigrations": "npx sequelize-cli db:migrate --env preMigrations --migrations-path util/db/pre-migrations >/dev/null",
+    "migrations": "npx sequelize-cli db:migrate --env database >/dev/null",
+    "prestart": "npm run migrations",
     "start": "node --experimental-modules src/server.js",
     "nm:run": "newman run tests/fit-and-competent-api.postman_collection.json",
     "test": "start-server-and-test start http://localhost:3009/fit-and-competent-api/v1/health nm:run"
@@ -22,10 +22,10 @@
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "notifications-node-client": "^4.7.2",
-    "pg": "^7.18.2",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^5.21.5",
-    "sequelize-cli": "^5.5.1",
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.19.2",
+    "sequelize-cli": "^6.4.1",
     "winston": "^3.2.1"
   },
   "devDependencies": {
